yaml/experimental/deployment-noalias.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-aks-keyvault-dep-noalias
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-aks-keyvault-app
  template:
    metadata:
      labels:
        app: my-aks-keyvault-app
        azure.workload.identity/use: "true"
        kubernetes.azure.com/pod-network: pn
        kubernetes.azure.com/pod-network-instance: pni
    spec:
      serviceAccountName: mi-service-account
      nodeSelector:
        kubernetes.io/hostname: aks-standardd4s1-30523925-vmss000002
      containers:
      - name: my-aks-keyvault-app
        image: isaacacn.azurecr.io/pbrtest/my-aks-keyvault-app:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
        securityContext:
          privileged: true
