yaml/experimental/deployment-nva.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-aks-keyvault-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-aks-keyvault-app
  template:
    metadata:
      labels:
        app: my-aks-keyvault-app
        azure.workload.identity/use: "true"
        kubernetes.azure.com/pod-network: pn
        kubernetes.azure.com/pod-network-instance: pni
    spec:
      serviceAccountName: mi-service-account
      nodeSelector:
        kubernetes.io/hostname: aks-standardd4s1-11101011-vmss000000
      containers:
      - name: my-aks-keyvault-app
        image: isaac73/my-aks-keyvault-app:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
        securityContext:
          privileged: true
      hostAliases:
      - ip: "172.16.10.100"
        hostnames:
        - "login.microsoftonline.com"
