yaml/experimental/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nva-traffic
spec:
  podSelector:
    matchLabels:
      app: nva
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: my-aks-keyvault-app
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: my-aks-keyvault-app
